src/App.css
:root {
  --theme-color: #536DFE;
  --correct-color: #67C23A;
  --wrong-color: #F56C6C;
  --favorite-color: #ffbf73;
  --disabled-color: #c9c9c9;
  --bg-color: #f4f6f8;
  --white-bg-color: #ffffff;
  --font-color: #2c3e50;
  --font-color-regular: #A2B1CA;
  --font-color-secondary: #909399;
  --white-color: #ffffff;
  --secondary-font-color: #909399;
  --box-shadow: 2px 2px 5px #c1d3ea, -2px -2px 5px white, -0.4px -0.4px 0.4px white;
  --box-shadow-active: inset 0.4px 0.4px 1.5px #f4f6f8, inset 1.5px 1.5px 3px #aec5e4, inset -0.8px -0.8px 1.5px white;
  --light-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
  --light-box-shadow-active: 0 15px 20px rgba(0, 0, 0, 0.02);
  --light-box-shadow-active-after: inset 0 -2px 5px white, inset 0 2px 5px rgba(0, 0, 0, 0.15);
  --circle-box-shadow: inset 3px 3px 10px #eaecee, inset -3px -3px 10px #feffff;
  --circle-box-shadow-active: 5px 5px 10px #eaecee, -5px -5px 10px #feffff;

  --white-border: 1px solid #fff;

  --border-radius: 10px;
  --sm-border-radius: 5px;
  --lg-border-radius: 15px;
  --xl-border-radius: 30px;

  --xs-font-size: 12px;
  --sm-font-size: 14px;
  --font-size: 16px;
  --lg-font-size: 18px;
  --xl-font-size: 20px;
}

.App {
  background-color: var(--bg-color);
}

.App main {
  min-width: 50%;
  max-width: 700px;
  min-height: 100vh;
  margin: 0 auto;
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow);
  background-color: var(--white-bg-color);
}

@media screen and (max-width: 1023px) {
  .App {
    padding: 0;
    min-height: 100vh;
  }

  .App main {
    width: 100%;
    height: 100vh;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .App {
    background-image: url(https://pic4.zhimg.com/v2-33e02d6b40468e6cb548ca33768bced4_r.jpg?source=1940ef5c);
    background-size: cover;
    background-attachment: fixed
  }
}

/* Round Action Button*/
.round-action-button {
  height: 36px;
  border-radius: var(--xl-border-radius);
  background: var(--white-bg-color);
  box-shadow: var(--light-box-shadow);
  transition: all 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
  cursor: pointer;
}

.round-action-button:after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  border-radius: var(--xl-border-radius);
  z-index: 2;
}

.round-action-button:active {
  box-shadow: var(--light-box-shadow-active);
}

.round-action-button:active:after {
  box-shadow: var(--light-box-shadow-active-after);
}

/* Rect Round Button*/
.intro-guide .introjs-tooltipbuttons .introjs-button,
.rect-round-button {
  position: relative;
  padding: 5px 10px;
  font-size: var(--sm-font-size);
  color: var(--font-color);
  text-align: left;
  border-radius: 5px;
  border: var(--white-border);
  box-shadow: var(--box-shadow);
  background: transparent;
  transition: all 200ms ease-out 0s;
}

.intro-guide .introjs-tooltipbuttons .introjs-button:before,
.rect-round-button:before {
  content: '';
  position: absolute;
  border-radius: 5px;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border: 2px solid transparent;
  filter: blur(2px);
  transition: all 200ms ease-out 0s;
}

.intro-guide .introjs-tooltipbuttons .introjs-button:after,
.rect-round-button:after {
  content: '';
  position: absolute;
  border-radius: 5px;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  transition: all 200ms ease-out 0s;
}

.intro-guide .introjs-tooltipbuttons .introjs-button:active,
.rect-round-button:active,
.intro-guide .introjs-tooltipbuttons .introjs-button.active,
.rect-round-button.active {
  background: linear-gradient(to top, var(--bg-color), #fafcfd);
  box-shadow: var(--box-shadow-active);
}

.intro-guide .introjs-button:focus {
  border: 1px solid var(--theme-color);
  background-color: var(--bg-color);
  box-shadow: var(--box-shadow);
  color: var(--theme-color);
}

